export const ORDER_STATUS = {
  PLANNED: 'PLANNED',
  VALIDATED: 'VALIDATED',
  ENRICHED: 'ENRICHED',
  PLACED: 'PLACED',
  BULKED: 'BULKED',
  CONFIRMED: 'CONFIRMED',
  CONTRACTED: 'CONTRACTED',
  BOOKED: 'BOOKED',
  ERRORED: 'ERRORED',
};

export const BULK_ORDER_STATUS = {
  BULKED: 'BULKED',
  CONFIRMED: 'CONFIRMED',
  CONTRACTED: 'CONTRACTED',
  BOOKED: 'BOOKED',
};

export const ORDER_SIDE = {
  BUY: 'BUY',
  SELL: 'SELL',
};

export const ORDER_LIFECYCLE = [
  ORDER_STATUS.PLANNED,
  ORDER_STATUS.VALIDATED,
  ORDER_STATUS.ENRICHED,
  ORDER_STATUS.PLACED,
  ORDER_STATUS.BULKED,
  ORDER_STATUS.CONFIRMED,
  ORDER_STATUS.CONTRACTED,
  ORDER_STATUS.BOOKED,
];
